<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    tools:context="com.example.charles.myapplication2.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/activity_main1"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context="com.example.charles.myapplication2.MainActivity"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.09">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/tea"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold" />


     <TextView
            android:id="@+id/textview2"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main5"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context="com.example.charles.myapplication2.MainActivity"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.39">

        <ImageView
            android:id="@+id/photo_image_view1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/lion" />
        <ImageView
            android:id="@+id/photo_image_view2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/skull" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main2"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context="com.example.charles.myapplication2.MainActivity"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/button1" />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/button4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main3"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context="com.example.charles.myapplication2.MainActivity"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/button5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main6"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context="com.example.charles.myapplication2.MainActivity"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/button6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main4"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        tools:context="com.example.charles.myapplication2.MainActivity"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textview3"
            android:layout_height="match_parent"
            android:text="0"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textview4"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="40sp"
            android:layout_height="match_parent"
            android:text="0"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button7" />


</LinearLayout>
